--- a/notebook/CF_KNN.ipynb
+++ b/notebook/CF_KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-26T07:20:01.190881900Z",
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b11a3b6bef124b27b7f6e4ff825017e5",
+       "model_id": "d63e010934d6432b8b8745b5a6f461bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x14841451c90>"
+       "<neo4j._sync.work.result.Result at 0x2a0bbbcb880>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x1482e90be50>"
+       "<neo4j._sync.work.result.Result at 0x2a0d06898d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
